@@ -2,14 +2,14 @@ Package: Rmpfr
 Type: Package
 Title: R MPFR - Multiple Precision Floating-Point Reliable
 Version: 0.4-8
-Date: 2012-05-21
+Date: 2012-05-22
 Author: Martin Maechler
 Maintainer: Martin Maechler <maechler@stat.math.ethz.ch>
 SystemRequirements: gmp (>= 4.2.3), mpfr (>= 3.0.0)
 SystemReqsNotes: MPFR (MP Floating-Point Reliable Library, http://mpfr.org/)
   and GMP (GNU Multiple Precision library, http://gmplib.org/), see README
 Depends: methods, gmp (>= 0.5-2), R (>= 2.12.0)
-Imports: gmp
+Imports: gmp, stats, utils
 Suggests: MASS, polynom, sfsmisc
 SuggestNotes: MASS, polynom, sfsmisc are only needed for vignette
 URL: http://rmpfr.r-forge.r-project.org/
